# ai-automation

./: .gitattributes  .gitignore  README.md  SETUP.md  requirements.txt  unrealengine_dx11.txt
.github/workflows/: auto-assign.yml
Game/: Manifest_DebugFiles_Win64.txt  Manifest_NonUFSFiles_Win64.txt  Manifest_UFSFiles_Win64.txt
GamingAI/: PLAN.md  README.md  main.py  requirements.txt  supervisor.py
GamingAI/gameqa/: capture.py  config.py  game_agent.py  input_controller.py  llm_vision.py  logger.py  monitor.py  monkey_agent.py  replay.py  target.py  vision.py
QA_UI/: error_report_plus.ui  find_ctrl_f.ui  logic.py  main.py  menu_bar.py  qa_first.ui  qa_flow.py  thread.py
QA_UI_test/: CHANGELOG_UI_01_placeholder_crash.md  error_report_plus.ui  logic.py  main.py  qa_first.ui
ai_bot/: bc_dataset.py  bc_dataset_bak.py  bc_model.py  bc_run.py  bc_run2.py  bc_test.py  bc_to_cach.py  bc_train.py  bc_train2.py  clean.py  recoder.py
frametrace/: .gitignore  CMakeLists.txt  README.md  run_bench.sh
frametrace/demo/: demo_workload.cpp
frametrace/include/frametrace/: frametrace.h  trace_format.h  trace_reader.h
frametrace/include/frametrace/detail/: clock.h  ring_buffer.h
frametrace/src/: frametrace.cpp  trace_reader.cpp
frametrace/tests/: bench_overhead.cpp  test_ring_buffer.cpp
frametrace/tools/ft_dump/: main.cpp
qa-openarena/: README.md  perf_baseline.txt  run_invariants.py  run_qa.bat  stop_qa.bat
qa-openarena/docs/: explain.md  gamecode_instrumentation.md  injection_map.md  process.md  setup.md
qa-openarena/models/: anomaly.joblib
qa-openarena/qa/: __init__.py  aggregate.py  anomaly.py  config.py  features.py  invariants.py  replay_source.py  session_log.py  tail_source.py  telemetry.py  watchdog.py
qa-openarena/sessions/: session_20260723_140540.summary.json  session_20260723_140540.telemetry.jsonl  session_20260723_140648.jsonl  session_20260723_140648.summary.json  session_20260723_140648.telemetry.jsonl  session_20260723_140851.jsonl  session_20260723_140851.summary.json  session_20260723_140851.telemetry.jsonl  session_20260723_140914.jsonl  session_20260723_140914.summary.json  session_20260723_140914.telemetry.jsonl  session_20260723_141004.jsonl  session_20260723_141004.summary.json  session_20260723_141004.telemetry.jsonl  session_20260723_141026.jsonl  session_20260723_141026.telemetry.jsonl  session_20260723_142151.jsonl  session_20260723_142151.summary.json  (+15 more)
qa_bot_mvp/: CHANGELOG_04_docs_sync.md  CHANGELOG_defect_pivot.md  NOTE_lstm_vs_window.md  NOTE_oracle_vs_anomaly.md  README.md  REFACTOR_01_schema.md  REFACTOR_02_restructure.md  REFACTOR_03_vizdoom.md  _vizdoom.ini  run.py  run_vizdoom.py
synthetic_anomaly_injection/: inject_loop_all.py  inject_missing_material.py  take_screenshot_and_wait.py
참고자료/: game_industry_qa.txt  game_qa_automation_notes.txt  generalization_and_data_strategy.txt  synthetic_anomaly_injection_walkthrough.txt
(+45 files in other folders)
